--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,51 @@
 body {
-  background-color: #111111;
-  color: white;
+  background-color: #000000;
   font-family: monospace;
+  color: white;
+}
+
+.mainpage {
+  width: 550px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: white;
+  box-sizing: border-box;
 }
 
 .sitename {
   font-size: 64px;
   font-weight: 800;
+  background-color: red;
+  margin: 0 auto 10px;
+  padding: 10px;
   text-align: center;
+  color: black;
+  border: 5px dashed black;
 }
 
-.names,
+li,
 a {
-  color: red;
-  font-size: 32px;
-  text-align: center;
+  list-style-type: square;
 }
 
-ul,
-li {
+li.mainrec {
   list-style-type: square;
-  /* text-align: center; */
+  color: red;
+  font-size: 24px;
 }
+
 
 img {
   height: 300px;
   width: auto;
 }
 
-.mainstyleposition {
-  list-style-position: inside;
-}
-
 .headingsrecipes {
   font-size: 32px;
   color: red;
+}
+
+.recipes {
+  background-color: #111111;
+  padding: 10px;
 }
